--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "themes/hugo-shopping-product-catalogue-simple"]
 	path = themes/hugo-shopping-product-catalogue-simple
 	url = https://github.com/kishaningithub/hugo-shopping-product-catalogue-simple.git
+[submodule "public"]
+	path = public
+	url = https://github.com/Aeitronics/aceitronics.github.com.git
+	branch = master
