--- a/config.toml
+++ b/config.toml
@@ -2,4 +2,4 @@ baseURL = "https://aceitronics.com/"
 # baseURL = "http://localhost:1313/"
 languageCode = "en-us"
 title = "Aceitronics"
-theme = "start-bootstrap"
+theme = "start-bootstrap-commerce"
